--- a/netflix.html
+++ b/netflix.html
@@ -11,7 +11,7 @@
     <div class="Nav">
         <div class="Nav_left">
             <div >
-                <img src="/images/pngwing.com.png" alt="logo" class="image">
+                <img src="images/pngwing.com.png" alt="logo" class="image">
             </div>
            
         </div>
@@ -49,14 +49,14 @@
 
     </div>
     <div class="r_details_2">
-        <img src="/images/family.jpg" alt="image" class="image_2">
+        <img src="images/family.jpg" alt="image" class="image_2">
 
     </div>
 
    </div>
    <div class="Banner_3">
     <div class="l_details_3">
-        <img src="/images/download.png" alt="image" class="download">
+        <img src="images/download.png" alt="image" class="download">
     </div>
     <div class="r_details_3">
         <div class="offline">
@@ -68,7 +68,7 @@
    </div>
    <div class="Banner_4">
     <div class="l_details_4">
-        <img src="/images/watching.png" alt="image" class="watching">
+        <img src="images/watching.png" alt="image" class="watching">
 
     </div>
     <div class="r_details_4">
@@ -84,7 +84,7 @@
    </div>
    <div class="Banner_5">
     <div class="l_details_5">
-        <img src="/images/kids.jpg" alt="image" class="kid">
+        <img src="images/kids.jpg" alt="image" class="kid">
     </div>
     <div class="r_details_5">
         <div class="kids_profile">
